ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"   # must be string
spec:
  ingressClassName: nginx                  # this is the key addition
  rules:
    - host: student.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-service
                port:
                  number: 8081
